--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ a:hover{
 
 @font-face {
     font-family: nos;
-    src: url(fonts/Nosifer-Regular.ttf);
+    src: url(Gasalt-Regular.ttf);
 }
 
 .name{
